--- a/css/style.css
+++ b/css/style.css
@@ -61,14 +61,99 @@ header {
 /* Inicio de la seccion principal */
 
 body {
-   background-color: #252525; 
+    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.info {
+    padding: 0.5px 20px 0.5px 20px;
+    background-color: rgba(255, 255, 255, 0.45);
+    border-radius: 12px;
+    margin: 5% 0 5% 25%;
+    text-align: left;
+    justify-content: left;
+    color: #000000;
+    width: fit-content;
+    display: grid;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(15px);
+}
+
+.info h1 {
+    font-size: 1.3vmax;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.info p {
+    font-size: 1.2vmax;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.hot-section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-content: space-between;
+    width: 100%;
+    text-align: center;
+}
+
+.partners {
+    
+}
+
+.partners img {
+    align-items: center;
+    margin: 10% 4px 0 4px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.offers {
+    padding: 0.5px 20px 0.5px 20px;
+    display: grid;
+    background-color: rgba(255, 255, 255, 0.45);
+    border-radius: 12px;
+    margin: 5% 0 5% 25%;
+    text-align: left;
+    justify-content: right;
+    color: #000000;
+    width: fit-content;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(15px);
+}
+
+.offers h1 {
+    font-size: 1.3vmax;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.offers p {
+    font-size: 1.2vmax;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main-section {
     /* Propiedades de la seccion principal completa */
     justify-content: space-between;
-    padding: 20px;
-    margin: 2% 0 0 0;
+    padding: 2px 20px 0 20px;
+    margin: 1% 0 0 0;
     background-color: #575757;
     border-radius: 20px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
