--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,9 @@ body {
 }
 
 .partners {
-    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-content: space-between;
 }
 
 .partners img {
