--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
     background-position: center;
     position: relative;
     background-repeat: no-repeat;
+    background-color: #252525;
 }
 
 .slogan h1 {
@@ -28,6 +29,7 @@ header {
     border: solid #f5c014;
     border-radius: 12px;
     background-color: rgba(0, 0, 0, 0.70);
+    pointer-events: none;
 }
 
 .schedule h2 {
@@ -41,6 +43,7 @@ header {
     border: solid #f5c014;
     border-radius: 8px;
     background-color: rgba(0, 0, 0, 0.70);
+    pointer-events: none;
 }
 
 .logo {
@@ -61,7 +64,7 @@ header {
 /* Inicio de la seccion principal */
 
 body {
-    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+    background: linear-gradient(315deg, rgba(69,174,165,1) 3%, rgba(144,216,169,1) 38%, rgba(215,255,149,1) 68%, rgba(245,192,20,1) 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
@@ -79,17 +82,21 @@ body {
     }
 }
 
+.hot-section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    width: 80%;
+    place-items: center;
+}
+
 .info {
     padding: 0.5px 20px 0.5px 20px;
     background-color: rgba(255, 255, 255, 0.45);
     border-radius: 12px;
-    margin: 5% 0 5% 25%;
+    margin: 3% 0 1% auto;
     text-align: left;
-    justify-content: left;
     color: #000000;
-    width: fit-content;
-    display: grid;
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.45);
     backdrop-filter: blur(15px);
 }
 
@@ -104,49 +111,27 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.hot-section {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    justify-content: space-between;
-    width: 100%;
-    text-align: center;
-}
-
-.partners {
-    
-}
-
-.partners img {
-    align-items: center;
-    margin: 10% 4px 0 4px;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-}
-
 .offers {
     padding: 0.5px 20px 0.5px 20px;
-    display: grid;
     background-color: rgba(255, 255, 255, 0.45);
     border-radius: 12px;
-    margin: 5% 0 5% 25%;
+    margin: 3% 0 1% auto;
     text-align: left;
-    justify-content: right;
     color: #000000;
-    width: fit-content;
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.45);
     backdrop-filter: blur(15px);
 }
 
 .offers h1 {
     font-size: 1.3vmax;
+    font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .offers p {
     font-size: 1.2vmax;
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .main-section {
@@ -240,6 +225,31 @@ body {
 
 .details p {
     margin: 5px 0 0 0;
+}
+
+.more-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: auto;
+    height: auto;
+}
+
+.partners {
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(15px);
+    margin: 40px 0 0 0;
+    padding: 0 12px 0 12px;
+    border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+.partners img {
+    margin: 20px 4px 20px 4px;
+    width: 6vmax;
+    height: 6vmax;
+    border-radius: 50%;
 }
 
 footer {
