--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ header {
     align-items: center;
     display: flex;
     border-radius: 0 0 20px 20px;
-    background-image: url('/img/IMG_2604.JPG');
+    background-image: url('/img/header-image.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
