--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ header {
     align-items: center;
     display: flex;
     border-radius: 0 0 20px 20px;
-    background-image: url('https://github.com/joseluisJ4L/Menu-Bodegon/blob/main/img/header-image.jpg');
+    background-image: url('https://github.com/joseluisJ4L/Menu-Bodegon/blob/main/img/header-image.jpg?raw=true');
     background-size: cover;
     background-position: center;
     position: relative;
