--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ body {
 .main-section {
     /* Propiedades de la seccion principal completa */
     justify-content: space-between;
-    padding: 2px 20px 0 20px;
+    padding: 2px 20px 1px 20px;
     margin: 1% 0 0 0;
     background-color: #575757;
     border-radius: 20px; 
@@ -188,6 +188,7 @@ body {
     /* propiedades de la imagen en la tarjeta */
     height: 16vmin;
     width: 16vmin;
+    object-fit: cover;
     border-radius: 8px;
     box-shadow: 3px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -195,7 +196,8 @@ body {
 .product h2 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    font-size: 1.5vmax;
+    font-size: 1.4vmax;      /* Modificar este valor si se encuentra algun nombre que no se haga fit */
+    text-align: center;
 }
 
 .product h3 {
@@ -225,6 +227,15 @@ body {
 
 .details p {
     margin: 5px 0 0 0;
+}
+
+.main-section h4 {
+    color: #fff;
+    border-radius: 20px;
+    text-align: center;
+    background-color: red;
+    padding: 4px 4px 4px 4px;
+    border: 8px solid #252525;
 }
 
 .more-container {
@@ -319,9 +330,30 @@ footer p {
     font-size: 1vmax;
     text-align: center;
     width: 100%;
+    padding: 4px;
 }
 
 .rights a {
     color: #f5f5f5;
+    font-family: monospace;
+    font-weight: bold;
     text-decoration: none;
+    background: linear-gradient(90deg, rgb(0, 0, 0) 3%, rgb(161, 161, 161) 38%, rgb(175, 175, 175) 68%, rgb(255, 255, 255) 98%);
+    animation: linearGradient 2s ease infinite;
+    background-size: 50% 50%;
+    background-attachment: fixed;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@keyframes linearGradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 50% 50%;
+    }
+    100% {
+        background-position: 100% 100%;
+    }
 }
