--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,13 @@ body {
     place-items: center;
 }
 
+.shop-button {
+    position: fixed;
+    z-index: 1;
+    bottom: 10px;
+    left: 10px;
+}
+
 .info {
     padding: 0.5px 20px 0.5px 20px;
     background-color: rgba(255, 255, 255, 0.45);
