--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,35 @@ body {
     } 
 }
 
+.hot-card {
+    /* propiedades de la tarjeta */
+    background-color: #575757;
+    border-radius: 15px;
+    padding: 5px;
+    margin: 8px 8px 8px 8px;
+    display: block;
+    padding: 10px;
+}
+
+.hot-card img {
+    /* propiedades de la imagen en la tarjeta */
+    height: 16vmin;
+    width: 16vmin;
+    object-fit: cover;
+    border-radius: 12px;
+    box-shadow: 4px 5px 25px rgb(205, 27, 18);
+}
+
+.hot-card h2 {
+    color: #f5f5f5;
+   text-shadow: 1px 1px 10px rgba(69,174,165,1); 
+}
+
+.hot-card p {
+    color: #f5f5f5;
+   text-shadow: 1px 1px 10px rgba(69,174,165,1); 
+}
+
 .card {
     /* propiedades de la tarjeta */
     background-color: #f5f5f5;
