--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,13 @@ body {
     } 
 }
 
+.offer-section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    width: 100%;
+    place-items: center; 
+}
+
 .hot-card {
     /* propiedades de la tarjeta */
     background-color: #575757;
